--- a/Despliegue_lambda_apigateway_ecr/Eddy_Comando_Ejecución_Codigo.ipynb
+++ b/Despliegue_lambda_apigateway_ecr/Eddy_Comando_Ejecución_Codigo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -71,71 +71,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El valor riesgo para: '[[25.6, 75.0, 5623.5, 0.0, 49.41176471, 89.0, 12.8, 69.0, 22.44129569, -0.236928659, -78.32793631, 2.0, 10.0]]' es 'HIGH'.\n",
-      "{'Output': 3}\n",
-      "        \n",
-      "El valor riesgo para: '[[44.8, 71.0, 3369.0, 0.0, 17.64705882, 89.0, 12.9, 67.0, 32.73576516, -0.14975741, -78.35247198, 1.0, 0.0]]' es 'MEDIUM'.\n",
+      "El valor riesgo para: '[[8.4, 0.0, 811.0, 0.0, 13.7254902, 90.0, 12.8, 66.0, 32.08447382, -0.154857673, -78.34936934, 1.0, 2.0]]' es 'MEDIUM'.\n",
       "{'Output': 2}\n",
       "        \n",
-      "El valor riesgo para: '[[198.4, 62.0, 3610.5, 0.0, 28.62745098, 89.0, 12.9, 63.0, 14.58204614, -0.281302328, -78.34452686, 2.0, 2.0]]' es 'MEDIUM'.\n",
+      "El valor riesgo para: '[[43.2, 71.0, 4111.5, 0.0, 18.43137255, 89.0, 12.9, 68.0, 16.36347733, -0.278398921, -78.33847186, 2.0, 2.0]]' es 'MEDIUM'.\n",
       "{'Output': 2}\n",
       "        \n",
-      "El valor riesgo para: '[[4.9, 30.0, 1486.0, 0.0, 14.50980392, 88.0, 12.8, 66.0, 3.486191896, -0.325705209, -78.41213613, 2.0, 9.0]]' es 'VERY HIGH'.\n",
+      "El valor riesgo para: '[[129.6, 78.0, 3711.0, 0.0, 22.35294118, 89.0, 12.8, 63.0, 29.5043066, -0.177573175, -78.34172931, 1.0, 0.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[6.2, 44.0, 2111.0, 0.0, 14.90196078, 88.0, 12.8, 66.0, 0.634661575, -0.328136464, -78.42727317, 2.0, 5.0]]' es 'VERY HIGH'.\n",
       "{'Output': 4}\n",
       "        \n",
-      "El valor riesgo para: '[[11.3, 34.0, 2558.0, 0.577673319, 23.52941176, 88.0, 12.8, 69.0, 35.20369176, -0.128291273, -78.36077585, 1.0, 4.0]]' es 'MEDIUM'.\n",
+      "El valor riesgo para: '[[-3.8, 40.0, 2030.0, 0.211480582, 50.19607843, 89.0, 12.8, 68.0, 0.253369396, -0.329434862, -78.43066466, 2.0, 8.0]]' es 'VERY HIGH'.\n",
+      "{'Output': 4}\n",
+      "        \n",
+      "El valor riesgo para: '[[29.6, 80.0, 3787.5, 0.0, 18.03921569, 88.0, 12.8, 69.0, 29.07037527, -0.181449051, -78.34044294, 1.0, 2.0]]' es 'MEDIUM'.\n",
       "{'Output': 2}\n",
       "        \n",
-      "El valor riesgo para: '[[-122.4, 73.0, 4272.0, 0.189144046, 24.70588235, 87.0, 12.9, 65.0, 17.67972718, -0.269697122, -78.33251073, 2.0, 3.0]]' es 'MEDIUM'.\n",
+      "El valor riesgo para: '[[-211.2, 61.0, 3589.5, 0.0, 17.64705882, 87.0, 12.8, 64.0, 15.25246681, -0.276949983, -78.34685041, 2.0, 2.0]]' es 'MEDIUM'.\n",
       "{'Output': 2}\n",
       "        \n",
-      "El valor riesgo para: '[[2.2, 6.0, 913.0, 0.0, 13.7254902, 90.0, 12.8, 67.0, 9.805019543, -0.316421622, -78.36789904, 2.0, 5.0]]' es 'MEDIUM'.\n",
+      "El valor riesgo para: '[[9.2, 35.0, 2655.0, 0.926168891, 65.88235294, 90.0, 12.8, 69.0, 3.566007524, -0.326099116, -78.4115219, 2.0, 9.0]]' es 'MEDIUM'.\n",
       "{'Output': 2}\n",
       "        \n",
-      "El valor riesgo para: '[[57.6, 67.0, 3858.0, 0.583471925, 71.76470588, 89.0, 12.8, 71.0, 12.53528217, -0.294811735, -78.35538469, 2.0, 4.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
+      "El valor riesgo para: '[[-6.6, 36.0, 1800.0, 0.0, 15.68627451, 89.0, 12.8, 70.0, 35.0248833, -0.129882158, -78.36029121, 1.0, 3.0]]' es 'VERY HIGH'.\n",
+      "{'Output': 4}\n",
       "        \n",
-      "El valor riesgo para: '[[42.4, 71.0, 4134.0, 0.0, 18.43137255, 88.0, 12.8, 71.0, 4.066564254, -0.326445415, -78.40732148, 2.0, 6.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[278.7, 0.0, 645.0, 0.0, 14.11764706, 90.0, 12.6, 71.0, 36.32004095, -0.125154178, -78.36166483, 1.0, 2.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[33.2, 0.0, 660.0, 0.0, 21.56862745, 89.0, 12.8, 76.0, 0.000563183, -0.330887069, -78.43234641, 2.0, 21.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[-261.3, 3.0, 1499.0, 0.383048968, 30.58823529, 91.0, 12.8, 68.0, 9.814905268, -0.316337426, -78.36783542, 2.0, 5.0]]' es 'LOW'.\n",
-      "{'Output': 1}\n",
-      "        \n",
-      "El valor riesgo para: '[[-25.9, 19.0, 2708.0, 1.748735091, 41.17647059, 89.0, 12.9, 73.0, 0.010865429, -0.330847003, -78.43230927, 2.0, 21.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[228.0, 70.0, 4021.5, 0.546160556, 53.7254902, 88.0, 12.8, 71.0, 12.16449677, -0.297685973, -78.35698547, 2.0, 4.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[69.6, 66.0, 3139.5, 0.274973284, 38.03921569, 91.0, 12.9, 63.0, 30.44123564, -0.169138634, -78.34324971, 1.0, 2.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[171.2, 71.0, 4089.0, 0.195685141, 18.43137255, 88.0, 12.9, 62.0, 17.43700079, -0.271602287, -78.33377455, 2.0, 4.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[41.6, 69.0, 3997.5, 0.35364469, 25.49019608, 89.0, 12.9, 65.0, 5.829352977, -0.326328655, -78.39557374, 2.0, 7.0]]' es 'MEDIUM'.\n",
-      "{'Output': 2}\n",
-      "        \n",
-      "El valor riesgo para: '[[40.8, 72.0, 4177.5, 0.0, 18.43137255, 88.0, 12.8, 68.0, 4.327548405, -0.324481535, -78.40628732, 2.0, 6.0]]' es 'HIGH'.\n",
+      "El valor riesgo para: '[[40.0, 87.0, 5061.0, 0.146609414, 19.60784314, 87.0, 12.9, 66.0, 23.43380303, -0.228319354, -78.32669721, 2.0, 0.0]]' es 'HIGH'.\n",
       "{'Output': 3}\n",
       "        \n",
-      "El valor riesgo para: '[[40.0, 63.0, 4725.0, 0.455377826, 72.54901961, 88.0, 12.8, 67.0, 19.46944226, -0.257027289, -78.33422072, 2.0, 3.0]]' es 'HIGH'.\n",
-      "{'Output': 3}\n",
+      "El valor riesgo para: '[[-4.6, 12.0, 959.0, 0.0, 14.50980392, 90.0, 12.7, 64.0, 36.15588107, -0.124925561, -78.36196306, 1.0, 2.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
       "        \n",
-      "El valor riesgo para: '[[-8.1, 2.0, 783.0, 0.0, 14.50980392, 91.0, 12.8, 65.0, 35.13429987, -0.128862835, -78.36073637, 1.0, 3.0]]' es 'MEDIUM'.\n",
+      "El valor riesgo para: '[[9.0, 0.0, 732.0, 0.0, 14.90196078, 89.0, 12.8, 66.0, 3.519126109, -0.325941369, -78.41176967, 2.0, 9.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[-8.0, 0.0, 807.0, 0.0, 14.11764706, 90.0, 12.7, 65.0, 35.13429987, -0.128861577, -78.36073629, 1.0, 3.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[432.3, 8.0, 1247.0, 0.773456615, 16.07843137, 90.0, 12.7, 69.0, 35.92630859, -0.123673431, -78.36150893, 1.0, 1.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[82.4, 56.0, 4192.5, 0.200153447, 69.01960784, 88.0, 12.9, 71.0, 3.672254233, -0.326639246, -78.41079083, 2.0, 7.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[-87.2, 56.0, 4183.5, 0.0, 65.49019608, 89.0, 12.9, 64.0, 19.38293424, -0.257711671, -78.33390363, 2.0, 1.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[42.4, 60.0, 3516.0, 0.0, 17.64705882, 89.0, 12.8, 65.0, 6.93983929, -0.329849347, -78.38592743, 2.0, 9.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[6.5, 38.0, 1919.0, 0.810922221, 28.62745098, 88.0, 12.8, 69.0, 32.16411016, -0.154186995, -78.34966932, 1.0, 2.0]]' es 'VERY HIGH'.\n",
+      "{'Output': 4}\n",
+      "        \n",
+      "El valor riesgo para: '[[52.8, 70.0, 4057.5, 0.202994813, 18.03921569, 88.0, 12.9, 63.0, 8.040680122, -0.325317755, -78.37869032, 2.0, 2.0]]' es 'MEDIUM'.\n",
+      "{'Output': 2}\n",
+      "        \n",
+      "El valor riesgo para: '[[-1.7, 13.0, 1024.0, 0.0, 19.21568627, 90.0, 12.7, 64.0, 36.14336964, -0.124811777, -78.3619722, 1.0, 2.0]]' es 'MEDIUM'.\n",
       "{'Output': 2}\n",
       "        \n"
      ]
@@ -143,35 +143,35 @@
    ],
    "source": [
     "def Agente():\n",
-    "    url = 'https://p06oxwlef9.execute-api.eu-north-1.amazonaws.com/FasePreliminar/Recurso_predictor'\n",
+    "    url = 'https://ye3c74bo62.execute-api.us-east-1.amazonaws.com/nueva_etapa/recurso-mlp-predictor'\n",
     "    counter = 0\n",
     "    risk_level_values = {1: 'low', 2: 'medium', 3: 'high', 4: 'very high'}\n",
     "\n",
     "    while counter < 20:\n",
-    "        random_number = np.random.randint(0, 2633 + 1)\n",
+    "        random_number = np.random.randint(0, 2634)\n",
     "        data = X.loc[[random_number]].values.tolist()\n",
     "        my_obj = {\"Input\": data}\n",
-    "        response = requests.post(url, data = json.dumps(my_obj))\n",
-    "        risk_level = eval(response.text)\n",
-    "        risk_level_category = \"\"\n",
-    "        for value in risk_level_values:\n",
-    "            if value == risk_level['Output']:\n",
-    "                risk_level_category = risk_level_values[value]\n",
-    "                break\n",
-    "        print(\"El valor riesgo para: '{}' es '{}'.\".format(my_obj['Input'], risk_level_category.upper()))\n",
-    "        print(risk_level)\n",
-    "        print(\"        \")\n",
-    "        counter = counter + 1\n",
+    "\n",
+    "        response = requests.post(url, data=json.dumps(my_obj))\n",
+    "\n",
+    "        if response.status_code == 200:\n",
+    "            outer = json.loads(response.text)               # Primer parsing\n",
+    "            inner = json.loads(outer['body'])               # Segundo parsing\n",
+    "            output_value = inner['Output']                  # Obtener valor numérico\n",
+    "\n",
+    "            risk_level_category = risk_level_values.get(output_value, 'unknown')\n",
+    "\n",
+    "            print(\"El valor riesgo para: '{}' es '{}'.\".format(my_obj['Input'], risk_level_category.upper()))\n",
+    "            print(inner)\n",
+    "            print(\"        \")\n",
+    "        else:\n",
+    "            print(f\"Error en la solicitud: {response.status_code}\")\n",
+    "        \n",
+    "        counter += 1\n",
     "        time.sleep(0.25)\n",
+    "\n",
     "Agente()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -190,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
